--- a/dog/templates/index.html
+++ b/dog/templates/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>Person and Dog detection using YOLOv12n</h1>
+<img id="bg" src="{{ url_for('video_feed') }}">
 </body>
 </html>
