--- a/dog/templates/human.html
+++ b/dog/templates/human.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <title>Human Detection</title>
 </head>
 <body>
-$END$
+    <h1>Live Feed</h1>
+<img id="bg" src="{{ url_for('video_feed') }}?human={{ 'true' if human else 'false' }}">
 </body>
 </html>
