--- a/dog/static/style.css
+++ b/dog/static/style.css
@@ -14,6 +14,7 @@ body {
 }
 
 h1 {
+    margin-top: 100px; /* Lower the title */
     text-align: center;
     margin-top: 30px;
     font-family: 'Horizon', sans-serif;
@@ -27,4 +28,33 @@ h1 {
     height: auto;
     border: 2px solid #555;  /* Optional: darker border to match dark theme */
     border-radius: 8px;
+}
+
+.button-container {
+    background-color: white;
+    padding: 30px 20px;
+    border-radius: 15px;
+    display: inline-block;
+    margin-top: 80px;
+}
+
+.btn {
+    display: block;
+    margin: 15px auto;
+    padding: 12px 25px;
+    font-size: 18px;
+    font-family: 'Horizon', sans-serif;
+    background-color: #000;
+    color: white;
+    border: 2px solid white;
+    border-radius: 10px;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    width: 200px;
+}
+
+.btn:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
 }
