--- a/Final/templates/human.html
+++ b/Final/templates/human.html
@@ -13,6 +13,7 @@
         <button class="btn" onclick="setVideoSrc(true, false)">Human Body</button>
         <button class="btn" onclick="setVideoSrc(true, true)">Face Detection</button>
          <a href="{{ url_for('index') }}" class="btn">← Back to Home</a>
+         <a href="{{ url_for('human_upload') }}" class="btn">Upload Human Photo</a>
     </div>
 
     <script>
