--- a/Final/templates/dog_upload.html
+++ b/Final/templates/dog_upload.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Upload Dog Media</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
-$END$
+    <h1>Upload Dog File</h1>
+    <div class="button-container">
+        <form method="post" enctype="multipart/form-data">
+            <input type="file" name="file">
+            <input type="submit" value="Upload">
+        </form>
+         <a href="{{ url_for('dog') }}" class="btn">← Back</a>
+    </div>
 </body>
 </html>
